--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     "react-dom/": "https://esm.sh/react-dom@^19.1.1/",
     "react/": "https://esm.sh/react@^19.1.1/",
     "cors": "https://esm.sh/cors@^2.8.5",
-    "express": "https://esm.sh/express@^5.1.0"
+    "express": "https://esm.sh/express@^5.1.0",
+    "process": "https://esm.sh/process@^0.11.10"
   }
 }
 </script>
