--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     "fs/": "https://esm.sh/fs@^0.0.1-security/",
     "path": "https://esm.sh/path@^0.12.7",
     "url": "https://esm.sh/url@^0.11.4",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^4.7.0",
-    "vite": "https://esm.sh/vite@^7.0.6"
+    "vite": "https://esm.sh/vite@^7.0.6",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^4.7.0"
   }
 }
 </script>
