--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     "path": "https://esm.sh/path@^0.12.7",
     "react-dom/": "https://esm.sh/react-dom@^19.1.1/",
     "url": "https://esm.sh/url@^0.11.4",
-    "process": "https://esm.sh/process@^0.11.10"
+    "process": "https://esm.sh/process@^0.11.10",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.53.0"
   }
 }
 </script>
