--- a/index.html
+++ b/index.html
@@ -9,18 +9,15 @@
 <script type="importmap">
 {
   "imports": {
-    "vite": "https://esm.sh/vite@^7.0.6",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^4.7.0",
-    "react/": "https://esm.sh/react@^19.1.1/",
-    "react": "https://esm.sh/react@^19.1.1",
-    "cors": "https://esm.sh/cors@^2.8.5",
-    "express": "https://esm.sh/express@^5.1.0",
-    "fs/": "https://esm.sh/fs@^0.0.1-security/",
-    "path": "https://esm.sh/path@^0.12.7",
+    "react": "https://esm.sh/react@^18.2.0",
+    "react-dom/client": "https://esm.sh/react-dom@^18.2.0/client",
     "react-dom/": "https://esm.sh/react-dom@^19.1.1/",
-    "url": "https://esm.sh/url@^0.11.4",
-    "process": "https://esm.sh/process@^0.11.10",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.53.0"
+    "react/": "https://esm.sh/react@^19.1.1/",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.53.0",
+    "express": "https://esm.sh/express@^5.1.0",
+    "cors": "https://esm.sh/cors@^2.8.5",
+    "vite": "https://esm.sh/vite@^7.0.6",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^4.7.0"
   }
 }
 </script>
